--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,29 @@ services:
     ports:
       - 127.0.0.1:8514:10514
 
+  api:
+    image: nginx:1.12.2
+    container_name: forester-api
+    restart: always
+
+    #volumes: 
+      # - ./proxy/nginx.conf:/etc/nginx/nginx.conf:ro
+
+    networks:
+      - forester_network
+    # Notes: you can update serveice ports for deployment.
+    # ports:
+      # - "8080:80"
+    
+    depends_on: 
+      - log
+      
+    logging:
+      driver: "syslog"
+      options:  
+        syslog-address: "tcp://127.0.0.1:8514"
+        tag: "api"
+
   proxy:
     image: nginx:1.12.2
     container_name: forester-proxy
