--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -44,7 +44,7 @@ http {
     server_name api.caogo.cn;
 
     location / {
-      proxy_pass http://forester-api:8080;
+      proxy_pass http://forester-api;
 
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
