--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,8 +2,8 @@ nose
 rednose
 Jinja2==2.10.1
 flask==1.0.2
-flask-restful=0.3.8
-
-pyecharts==0.5.3
+flask-restful==0.3.8
+pymongo==3.6
+flask_mongoengine==0.9.5
 supervisor==4.1
 gunicorn==19.9
